--- a/src/components/Popover/popover.scss
+++ b/src/components/Popover/popover.scss
@@ -6,7 +6,7 @@
     -webkit-overflow-scrolling: touch;
     position: fixed;
     max-height: 100%;
-    max-width: 80%;
+    max-width: 95%;
     overflow: auto;
     z-index: 1060;
 
